my-apps/media/hoarder/hoarder/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hoarder
  namespace: hoarder
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "hoarder.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hoarder-web
          port: 3000
